--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
                                 ОДЕЖДА
                             </button>                            
                         </li>
+
+                        <li class="header__nav-item header__nav-item--home">
+                            <button class="header__nav_btn" data-path="five">
+                            </button>                            
+                        </li>
                     </ul>
                 </nav>
 
@@ -63,7 +68,21 @@
             </div>
         </header>
 
-        <main class="main main-content">
+        <main class="main main-content" data-target="five">
+            
+            <section class="content content_active">
+                <div class="container main-container">
+                    <h2 class="title">
+                        Добро пожаловать
+                    </h2>
+                    <p class="text">
+                        Рады приветствовать Вас на нашем скромном сайте, где мы попытались собрать основную информацию, которая могла бы пригодиться всем русскоязычным работникам культуры антивоенных взглядов. Вы уехали из России, и сейчас Вы находитесь во Франции. Возможно, Вы уже давно находитесь во Франции. 
+                        Мы рады поделиться с Вами информацией, которая поможет решить вам посведневные финансовые и бюрократические вопросы новой жизни. Мы очень рады поделиться с Вами своим опытом, и надеемся, что наша совместная интеграция во французское общество пройдёт как можно спокойнее и легче. 
+                        И, конечно, самое главное. Нет войне. Победу Украине. Свободу России. 
+                    </p>
+                </div>
+            </section>    
+
             <section class="housing content" data-target="one">
                 <div class="main-container container">
                     <h2 class="title">
@@ -77,9 +96,9 @@
                 </div>
             </section>
 
-            <section class="bank content content_active" data-target="three-one">
+            <section class="bank content" data-target="three-one">
                 <div class="main__container container">
-                   <h2 class="bank__title">
+                   <h2 class="title">
                         Nickel
                    </h2>
                    <p class="bank__description description">
@@ -87,19 +106,29 @@
                    </p>
                    <ul class="bank__list">
                         <li class="bank__item">
-                            Оформить заявку на сайте <a class="bank__link" href="http://nickel.eu" target="_blank">(nickel.eu)</a> - если указать налоговое резидентство только Франции, никаких проблем вообще, если указать налоговое резидентство еще и РФ - заблокируют счет и попросят прислать специальную справку. внимание: обязательно наличие французского номера телефона! 
+                            <p class="text">
+                                1) Оформить заявку на сайте <a class="bank__link" href="http://nickel.eu" target="_blank">(nickel.eu)</a> - если указать налоговое резидентство только Франции, никаких проблем вообще, если указать налоговое резидентство еще и РФ - заблокируют счет и попросят прислать специальную справку. внимание: обязательно наличие французского номера телефона! 
+                            </p>   
                         </li>
                         <li class="bank__item">
-                            после получения пин-кода получить физическую карту в табачном киоске и сразу положить на нее наличные, тогда не будет комиссии с первого пополнения. внимание: любое пополнение наличными - 2% от суммы!
+                            <p class="text">
+                                2) После получения пин-кода получить физическую карту в табачном киоске и сразу положить на нее наличные, тогда не будет комиссии с первого пополнения. внимание: любое пополнение наличными - 2% от суммы!
+                            </p>   
                         </li>
                         <li class="bank__item">
-                            активировать карту. если возникнут проблемы с налоговым резидентством РФ, заполнить форму FATCA (есть на сайте банка), подписать и отправить на почту <a class="bank__link" href="mailto:sos@compte-nickel.fr" target="_blank">sos@compte-nickel.fr</a> вместе с паспортом и всеми данными (могут потребовать специальную форму для их ввода с подписью как в паспорте)
+                            <p class="text">
+                                3) Активировать карту. если возникнут проблемы с налоговым резидентством РФ, заполнить форму FATCA (есть на сайте банка), подписать и отправить на почту <a class="bank__link" href="mailto:sos@compte-nickel.fr" target="_blank">sos@compte-nickel.fr</a> вместе с паспортом и всеми данными (могут потребовать специальную форму для их ввода с подписью как в паспорте)
+                            </p>   
                         </li>
                         <li class="bank__item">
-                            если не будет ответа, звонить в поддержку и просить активировать карту, по идее делают довольно быстро, в течение нескольких дней, но скорее всего придется звонить и выяснять в любом случае  
+                            <p class="text">
+                                4) Если не будет ответа, звонить в поддержку и просить активировать карту, по идее делают довольно быстро, в течение нескольких дней, но скорее всего придется звонить и выяснять в любом случае  
+                            </p>   
                         </li>
                         <li class="bank__item">
-                            пользоваться везде в Европе, пополнять с помощью переводов с иностранных счетов (тогда нет комиссии) 
+                            <p class="text">
+                                5) Пользоваться везде в Европе, пополнять с помощью переводов с иностранных счетов (тогда нет комиссии) 
+                            </p>   
                         </li>
                     </ul>
                 </div>
@@ -107,7 +136,7 @@
     
             <section class="visa content" data-target="two">
                 <div class="visa__container container">
-                    <h2 class="visa__title">
+                    <h2 class="title">
                         APS
                     </h2>
                     <p class="visa__description description">
