third commit: some repararions for texts

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         Надо отправмить e-mail в префектуры по месту проживания
                     </p>
                     <p class="visa__text-aps">
-                        К письму приложить: паспорт, визу, штамп о въезде и justificatif de domicile ( например, письмо от хозяина квартиры или официального арендатора, что вы живете у него или унее.- attestation d’heberegement <a href="http://https://www.service-public.fr/simulateur/calcul/AttestationHebergement">https://www.service-public.fr/simulateur/calcul/AttestationHebergement</a>  + его или ее паспорт, и счет за ЖКХ где есть их имя))
+                        К письму приложить: паспорт, визу, штамп о въезде и justificatif de domicile ( например, письмо от хозяина квартиры или официального арендатора, что вы живете у него или унее.- attestation d’heberegement (<a href="http://https://www.service-public.fr/simulateur/calcul/AttestationHebergement">ссылка для получения </a>) + его или ее паспорт, и счет за ЖКХ где есть их имя))
                     </p>
                         <p class="visa__text-aps">
                             Текст:
